# pixel-perfect-depth

./: README.md  main.py  pyproject.toml  run.py  run_point_cloud.py  run_video.py  train.sh
docs/: index.html
ppd/configs/: train_finetune.yaml  train_pretrain.yaml
ppd/data/: tartanair.py
ppd/models/: dit.py  ppd.py  ppd_train.py
ppd/utils/: transform.py
ppd/utils/diffusion/: sampler.py
